feat: add local llm service
